5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1752_1522.log
== TEST (2019-05-16 16:12:10) 
-- CODE:
m = int(input("m:"))
d = int(input("d:"))
mc=int(input("mc:"))
mr=int(input("mr:"))
mes=0
moed=m
while(moed>0):
	moed=moed+mc-d-mr
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (espaco <= 80000):
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:45) 
-- CODE:
m = int(input("m:"))
d = int(input("d:"))
mc=int(input("mc:"))
mr=int(input("mr:"))
mes=0
moed=m
while(moed>0):
	moed=moed+mc-d-mr
	mes=mes+1
print(mes)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:12:48) 
-- CODE:
m = int(input("m:"))
d = int(input("d:"))
mc=int(input("mc:"))
mr=int(input("mr:"))
mes=0
moed=m
while(moed>0):
	moed=moed+mc-d-mr
	mes=mes+1
print(mes)
-- EXECUTION TIME:
0.108629
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
2
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
